hw03/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw03-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hw03-app
  template:
    metadata:
      labels:
        app: hw03-app
    spec:
      containers:
        - name: kuber-app
          image: ygomonov/otus-microservice-architecture:hw03
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
