hw03/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw03-service
spec:
  selector:
    app: hw03-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
